--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+* {
+	outline: 1px solid red !important;
+}
+
+*{
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+}
+.screenshot {
+	maxwidth:460px;
+}
+
 .description {
 	color:red; background-color: black;
 }
