--- a/style.css
+++ b/style.css
@@ -8,10 +8,19 @@
 	-ms-box-sizing: border-box;
 	box-sizing: border-box;
 }
+.app {
+	display: -webkit-flex;
+	display: flex;
+}
 .screenshot {
 	maxwidth:460px;
 }
 
+.title {
+	background-color: #33BEBE;
+	color: white;
+}
 .description {
-	color:red; background-color: black;
+	margin-left: 50px;
+
 }
